namespace GraphFlix.Models;

public interface IEdge
{
}
