using GraphFlix.DTOs;

namespace GraphFlix.Repositories
{
    public class GenreRepository : IGenreRepository
    {
        public Task<IEnumerable<GenreDto>> GetAll()
        {
            throw new NotImplementedException();
        }
    }
}
