namespace GraphFlix.Services
{
    public interface ISaltService
    {
        public string GenerateSalt();
    }
}
